# django-core-boilerplate

./: .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
core/project/: asgi.py  wsgi.py
core/project/settings/: local.py  main.py
