[project]
name = "django-core-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
authors = [{ name = "Artem Sokolov", email = "artem.sokolov.dev@gmail.com" }]
dependencies = [
    "django>=5.2.2",
    "django-environ>=0.12.0",
]

[project.optional-dependencies]
drf = ["django-rest-framework>=0.1.0"]
psql = ["psycopg>=3.2.9"]
mysql = ["mysqlclient>=2.2.7"]